[package]
name = "endianness"
version = "0.1.0"
authors = ["igrslv <salauyou.ihar@gmail.com>"]
repository = "https://github.com/igrslv/rust-endianness.git"
homepage = "https://github.com/igrslv/rust-endianness"
documentation = "http://igrslv.github.io/rustdoc/endianness/"
license = "MIT"
readme = "README.md"
description = "Rust library for reading numbers in big-endian and little-endian."

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3"
